Archive2/1a/7464cd756c2556/output
main.cpp:4:22: error: 'literals' is not a namespace-name
 using namespace std::literals;
                      ^
main.cpp:4:30: error: expected namespace-name before ';' token
 using namespace std::literals;
                              ^
main.cpp: In function 'int main()':
main.cpp:7:18: error: unable to find numeric literal operator 'operator"" s'
     std::cout << 10s;
                  ^
